fix: Responsive license plate doesnt wrap whitespace anymore

--- a/src/components/LicensePlate/index.css
+++ b/src/components/LicensePlate/index.css
@@ -3,6 +3,7 @@
   border: 3px solid black;
   border-radius: 0.5em;
   overflow: hidden;
+  white-space: nowrap;
   background: #eaeef3;
   font-size: 14px;
 }
